function(cppreact_test NAME)
  add_executable(${NAME} ${NAME}.cpp)
  target_link_libraries(${NAME} PRIVATE cppreact::cppreact)
  add_test(NAME cppreact_${NAME} COMMAND ${NAME})
endfunction()

cppreact_test(vnode_test)
cppreact_test(diff_test)
cppreact_test(hooks_test)
cppreact_test(schedule_test)
cppreact_test(composition_test)
cppreact_test(event_test)
cppreact_test(ref_measure_test)
cppreact_test(ref_reuse_test)
cppreact_test(ref_prop_test)
cppreact_test(memo_test)
cppreact_test(native_island_test)
cppreact_test(portal_test)
cppreact_test(sync_external_store_test)
cppreact_test(reducer_test)
cppreact_test(callback_test)
cppreact_test(layout_effect_test)
cppreact_test(context_update_test)
