list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras ${catch2_SOURCE_DIR}/extras)
include(Catch)

function(cppreact_catch_test NAME)
  add_executable(${NAME} ${NAME}.cpp)
  target_link_libraries(${NAME} PRIVATE cppreact::cppreact Catch2::Catch2WithMain)
  catch_discover_tests(${NAME} TEST_PREFIX "cppreact_")
endfunction()

cppreact_catch_test(callback_test)
cppreact_catch_test(object_test)
cppreact_catch_test(values_test)
cppreact_catch_test(create_element_test)
cppreact_catch_test(render_test)
cppreact_catch_test(components_test)
cppreact_catch_test(keys_test)
cppreact_catch_test(fragments_test)
cppreact_catch_test(events_test)
cppreact_catch_test(refs_test)
cppreact_catch_test(use_state_test)
cppreact_catch_test(use_effect_test)
cppreact_catch_test(use_layout_effect_test)
cppreact_catch_test(use_memo_test)
cppreact_catch_test(use_callback_test)
cppreact_catch_test(use_ref_test)
cppreact_catch_test(use_reducer_test)
cppreact_catch_test(use_context_test)
cppreact_catch_test(memo_test)
cppreact_catch_test(portals_test)
cppreact_catch_test(sync_external_store_test)
cppreact_catch_test(flush_test)
cppreact_catch_test(native_element_test)
cppreact_catch_test(helpers_test)
